Fix background overflow bug

--- a/htdocs/default.css
+++ b/htdocs/default.css
@@ -410,9 +410,10 @@
 	{
 		position: relative;
 		padding: 0em 0em 7em 0em;
-		background: #FFF url(images/header-bg.png) no-repeat top;
+		background: #FFF url(images/header-bg.png) no-repeat top fixed;
 		background-size: cover;
 		border-bottom: 1px solid rgba(0,0,0,0.08);
+		min-width: 1200px;
 	}
 
 	#header-wrapper.narrow
@@ -624,6 +625,7 @@
 		background: #2651a8;
 		background-size: cover;
 		text-align: center;
+		min-width: 1200px;
 	}
 	
 	#downloads .container
